部分链接修正，修复绿色版请求无法正常访问的Bug

--- a/nine_style/view/q_144.html
+++ b/nine_style/view/q_144.html
@@ -12,7 +12,7 @@
 
 	<!-- 将public设置为站点主页面，则css链接为：href="/static/q_144.css" -->
 	<link rel="stylesheet" type="text/css"
-		href="http://debug.yixzm.cn/opensource/nine_style_people/public/static/q_144.css">
+		href="/nine/public/static/q_144.css">
 
 </head>
 
@@ -52,7 +52,7 @@
 	<footer id="copyright"></footer>
 
 	<!-- 将public设置为站点主页面，则css链接为：href="/static/q_144.js" -->
-	<script src="http://debug.yixzm.cn/opensource/nine_style_people/public/static/q_144.js"></script>
+	<script src="/nine/public/static/q_144.js"></script>
 	<script src="http://cdn.yixzm.cn/lib/echarts/echarts.min.js"></script>
 
 </body>
